--- a/react-front-end/src/components/dashboard.css
+++ b/react-front-end/src/components/dashboard.css
@@ -1,6 +1,7 @@
 .dashboard {
   display: flex;
   flex-direction: column;
+  margin-top: 60px;
 }
 
 .dashboard-body {
@@ -11,10 +12,8 @@
 .dashboard-main {
   height: 100vh;
   width: 100vw;
+  margin-left: 250px;
   background-color: #F7F9Fa;
-  /* background-image: url('../../src/assets/background.png');
-  background-repeat: no-repeat;
-  background-size: 100% 98%; */
   padding-top: 2%;  
   overflow: scroll
 }
